--- a/main.html
+++ b/main.html
@@ -20,15 +20,82 @@
             <span class="logo_name">company</span>
           </div>
           <div class="media-icons">
-            <!-- your code here -->
+            <a href="https://facebook.com/company" class="facebook">
+              <i class="fa fa-facebook-f"></i>
+            </a>
+            <a href="https://twitter.com/company" class="twitter">
+              <i class="fa fa-twitter"></i>
+            </a>
+            <a href="https://instagram.com/company" class="instagram">
+              <i class="fa fa-instagram"></i>
+            </a>
+            <a href="https://linkedin.com/company/company" class="linkedin">
+              <i class="fa fa-linkedin"></i>
+            </a>
+            <a href="https://youtube.com/company" class="youtube">
+              <i class="fa fa-youtube-play"></i>
+            </a>
           </div>
         </div>
         <div class="link-boxes">
-          <!-- your code here -->
+          <div class="box">
+            <div class="link_name">Home</div>
+            <ul>
+              <li><a href="/">Homepage</a></li>
+              <li><a href="/featured">Featured Products</a></li>
+              <li><a href="/testimonials">Customer Reviews</a></li>
+              <li><a href="/news">Latest News</a></li>
+            </ul>
+          </div>
+          <div class="box">
+            <div class="link_name">About</div>
+            <ul>
+              <li><a href="/about">About Us</a></li>
+              <li><a href="/team">Our Team</a></li>
+              <li><a href="/mission">Our Mission</a></li>
+              <li><a href="/careers">Careers</a></li>
+            </ul>
+          </div>
+          <div class="box">
+            <div class="link_name">Links</div>
+            <ul>
+              <li><a href="/privacy">Privacy Policy</a></li>
+              <li><a href="/terms">Terms of Service</a></li>
+              <li><a href="/faq">FAQ</a></li>
+              <li><a href="/support">Support Center</a></li>
+            </ul>
+          </div>
+          <div class="box">
+            <div class="link_name">Services</div>
+            <ul>
+              <li><a href="/services/web-design">Web Design</a></li>
+              <li><a href="/services/app-development">App Development</a></li>
+              <li><a href="/services/digital-marketing">Digital Marketing</a></li>
+              <li><a href="/services/consulting">Business Consulting</a></li>
+            </ul>
+          </div>
+          <div class="box">
+            <div class="link_name">Contact</div>
+            <div class="contact-info">
+              <p><strong>Phone:</strong> <span class="phone">8879887262</span></p>
+              <p><strong>Email:</strong> info@company.com</p>
+              <p><strong>Address:</strong> 123 Business Street, City, State 12345</p>
+            </div>
+            <div class="input-box">
+              <input type="text" placeholder="Enter your email">
+              <input type="button" value="Subscribe">
+            </div>
+          </div>
         </div>
       </div>
       <div class="bottom-details">
-        <!-- your code here -->
+        <div class="bottom_text">
+          <span class="copyright_text">Copyright © 2025 <a href="#">Company.</a> All rights reserved</span>
+          <span class="policy_terms">
+            <a href="/privacy">Privacy policy</a>
+            <a href="/terms">Terms & condition</a>
+          </span>
+        </div>
       </div>
     </footer>
   </body>
